Particle system "Use Count" option fails when instancing objects inside a linked collection #62587

Closed
opened 2019-03-14 20:51:41 +01:00 by Daniel Salazar · 7 comments
Member

System Information
Operating system: Windows 10
Graphics card: GTX1080

Blender Version
Broken: 55e79d8f36

Exact steps for others to reproduce the error

Download the following 2 files
Instance_Collection.blend
Instance_Particle.blend

Open Instance_Particle.blend.
This file comes preloaded with a particle system ready to instance objects from within a collection linked from the Instance_Collection.blend file.
Go ahead and pick the "Instances" colection from the particle setting's drop down menu.
image.png
The objects in the "Use Count" are listed correctly.
image.png
Save and re-open the file. The list will be populated with a bunch of cubes only.
image.png
Enable the "Use Count" option. Now all objects will appear but the cube will remain duplicated various times.
image.png
Save and re-load. Even more cubes now!
image.png

**System Information** Operating system: Windows 10 Graphics card: GTX1080 **Blender Version** Broken: 55e79d8f36c6 **Exact steps for others to reproduce the error** Download the following 2 files [Instance_Collection.blend](https://archive.blender.org/developer/F6825428/Instance_Collection.blend) [Instance_Particle.blend](https://archive.blender.org/developer/F6825441/Instance_Particle.blend) Open Instance_Particle.blend. This file comes preloaded with a particle system ready to instance objects from within a collection linked from the Instance_Collection.blend file. Go ahead and pick the "Instances" colection from the particle setting's drop down menu. ![image.png](https://archive.blender.org/developer/F6825451/image.png) The objects in the "Use Count" are listed correctly. ![image.png](https://archive.blender.org/developer/F6825456/image.png) Save and re-open the file. The list will be populated with a bunch of cubes only. ![image.png](https://archive.blender.org/developer/F6825463/image.png) Enable the "Use Count" option. Now all objects will appear but the cube will remain duplicated various times. ![image.png](https://archive.blender.org/developer/F6825471/image.png) Save and re-load. Even more cubes now! ![image.png](https://archive.blender.org/developer/F6825474/image.png)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-15 11:23:07 +01:00

@Sergey feel free to reassign.

@Sergey feel free to reassign.
Sergey Sharybin removed their assignment 2019-03-15 11:39:05 +01:00
Brecht Van Lommel was assigned by Sergey Sharybin 2019-03-15 11:39:05 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht, afraid you're the most knowledgeable person about this behavior, you did all the fixes in this area for the studio.

@brecht, afraid you're the most knowledgeable person about this behavior, you did all the fixes in this area for the studio.

This issue was referenced by b29790a953

This issue was referenced by b29790a953ff0f31c431daaaa2864e48bd38e94c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62587
No description provided.