Fix T62587: Particle instances Use Count not saved correctly

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4544